# html_parser

./: .gitignore  README.md  pyproject.toml
html_parser/: graphics.py  interpreter.py  parser.py
tests/: test_html_parser.py
