[tool.poetry]
name = "html_parser"
version = "0.1.0"
description = ""
authors = ["Tomasz Szewczyk <tomasz.szewczyk02@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sly = "^0.4"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
